1. Загрузка данных в вид [#295782]

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,10 +19,11 @@
             crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <title>Accidents</title>
+    <title>Автомобильные инциденты</title>
 </head>
 
 <body>
-    <div>Проект автонарушители</div>
+        <!--Навигационная панель вынесена в отдельный файл navbar.html -->
+        <div th:insert="navbar"></div>        
 </body>
 </html>
