--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,6 +24,33 @@
 
 <body>
         <!--Навигационная панель вынесена в отдельный файл navbar.html -->
-        <div th:insert="navbar"></div>        
+        <div th:insert="navbar"></div>
+        
+        <div class="container">
+    
+            <div class="row">
+                <table class="table">
+                    <thead>
+                        <tr>                            
+                            <th scope="col">#</th>
+                            <th scope="col">Наименование</th>
+                            <th scope="col">Описание</th>
+                            <th scope="col">Адрес</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="accident: ${accidents}">
+                            <td th:text="${accident.id}"/>
+                            <td th:text="${accident.name}"/>
+                            <td th:text="${accident.text}"/>
+                            <td th:text="${accident.address}"/>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+    
+    
+        </div>
+
 </body>
 </html>
