--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <body>
 	<div th:fragment="navbar">
-	    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	        <div class="container">
-	            <a class="navbar-brand" href="/">Job4_accidents</a>
-	            <div class="collapse navbar-collapse">
-                    <div class="d-flex">
-						<a class="nav-link text-secondary me-3" href="#" th:text="${user}"></a>						
-					</div>
-	            </div>
-	        </div>
-	    </nav>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container">
+				<a class="navbar-brand" href="/">Accidents</a>							
+				<div class="d-flex">
+					<a class="nav-link text-secondary me-3" href="#" th:text="${user}"></a>
+				</div>
+			</div>
+	</div>
+	</nav>
 	</div>
 </body>
+
 </html>
