--- a/src/main/resources/templates/accidents/create.html
+++ b/src/main/resources/templates/accidents/create.html
@@ -1,8 +1,6 @@
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <!--  Зависимости Bootstrap-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,33 +13,29 @@
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <title>Автомобильные инциденты</title>
+    <title>Автомобильные инцеденты</title>
 </head>
-
 <body>
     <!--Навигационная панель вынесена в отдельный файл navbar.html -->
     <div th:insert="navbar"></div>
     <div class="container">
-        <div class="row">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Наименование</th>
-                        <th scope="col">Адрес</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="accident: ${accidents}">
-                        <td th:text="${accident.id}" />
-                        <td><a th:text="${accident.name}" th:href="@{/accidents/update/{id}(id=${accident.id})}"></a>
-                        </td>
-                        <td th:text="${accident.address}" />
-                    </tr>
-                </tbody>
-            </table>
+        <div class="row pt-3">
+            <div class="card" style="width: 100%">
+                <div class="card-header">
+                    Новый инцидент
+                </div>
+                <div class="card-body">
+                    <form th:action="@{/accidents/save}" method="POST" enctype="multipart/form-data">
+                        <input type="hidden" name="id" value="0" />
+                        <div class="form-group">
+                            <label for="name">Имя</label>
+                            <input type="text" class="form-control" name="name" id="name">
+                        </div>
+                        <button type="submit" class="btn btn-primary mt-3">Сохранить</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </body>
-
 </html>
