--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -5,10 +5,16 @@
 	<div th:fragment="navbar">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container">
-				<a class="navbar-brand" href="/">Accidents</a>							
-				<div class="d-flex">
-					<a class="nav-link text-secondary me-3" href="#" th:text="${user}"></a>
+				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+					<div class="navbar-nav">
+						<a class="nav-item nav-link" th:href="@{/accidents}">Главная</a>
+						<a class="nav-item nav-link" th:href="@{/accidents}">Инциденты</a>
+						<a class="nav-item nav-link" th:href="@{/accidents/create}">Добавить Инцидент</a>
+					</div>
 				</div>
+			</div>
+			<div class="d-flex">
+				<a class="nav-link text-secondary me-3" href="#" th:text="${user}"></a>
 			</div>
 	</div>
 	</nav>
