--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -7,7 +7,7 @@
 			<div class="container">
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav">
-						<a class="nav-item nav-link" th:href="@{/accidents}">Главная</a>
+						<a class="nav-item nav-link" th:href="@{/index}">Главная</a>
 						<a class="nav-item nav-link" th:href="@{/accidents}">Инциденты</a>
 						<a class="nav-item nav-link" th:href="@{/accidents/create}">Добавить Инцидент</a>
 					</div>
