--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -14,7 +14,8 @@
 				</div>
 			</div>
 			<div class="d-flex">
-				<a class="nav-link text-secondary me-3" href="#" th:text="${user}"></a>
+				<a class="nav-link text-secondary me-3" href="#" th:text="${user.username}"></a>
+				<a class="nav-link text-secondary me-3" href="/logout">logout</a>
 			</div>
 	</div>
 	</nav>
